--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --font-size: 1.5rem;
     --mono: "Oxygen mono", monospace;
     --sans: Oxygen, sans-serif;
+    --transition-time: 0.2s;
 }
 
 html {
@@ -310,6 +311,7 @@ q {
 
 .card {
     background-color: #171321;
+    --bg-filter-opacity: 0.5;
     height: 13em;
     width: 10em;
     font-size: 1.5em;
@@ -320,6 +322,19 @@ q {
     align-items: flex-start;
     box-shadow: 0 0 5em -1em black;
     border: 5px solid #ccc;
+    --bg-filter-opacity: 0.7;
+    transition:  var(--transition-time);
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0 0 5em -1em black;
+    position: relative;
+    overflow: hidden;
+    background-image: linear-gradient(rgba(0,0,0,var(--bg-filter-opacity)),rgba(0,0,0,var(--bg-filter-opacity))), var(--bg-img);
+  }
+
+  .card:hover {
+    background: #3c3163;
+    color: white;
   }
 
   .card p{
@@ -331,10 +346,7 @@ q {
     margin: 0;
   }
 
-  .card a:hover {
-    font-style: italic;
-    border-bottom: 1px solid var(--aqua);
-  }
+
 
     .card h1{
         color: aquamarine;
